# chimatools

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build_lua.sh  chimatools-dev-1.rockspec  main.fnl  main.lua
chimalib/: chimatools.c  chimatools.h  stb_image.h  stb_image_write.h  stb_rect_pack.h
chimatools/: blob.fnl  common.fnl  init.fnl  sprite.fnl  util.fnl
chimatools/src/: chima_common.h  chimatools.c  chimatools.h
examples/: CMakeLists.txt  c_example.c  cpp_example.cpp
fnl/: chimapack.fnl  chimasprite.fnl
fnl/chimatools/: init.fnl  lib.fnl  sprite.fnl
include/chimatools/: chimatools.h  chimatools.hpp
libchima/: chimatools.c  chimatools.h  example.c  stb_image_write.h
src/: chima_common.h  chimatiler.fnl  chimatools.c  chimatools.h  config.h.in  core.c  image.c  internal.h  main.lua  spritesheet.c  stb_image.h  stb_image_write.h  stb_rect_pack.h  util.c
src/assimp/: init.fnl  lib.fnl
src/ffi/luajit/: image.fnl  init.fnl  lib.fnl  spritesheet.fnl
src/stb/: stb_image.h  stb_image_write.h  stb_rect_pack.h
test/: c_example.c  cpp_example.cpp  example.c
xdg/: chima-asset.xml
